Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Enable_reCaptcha__c.field-meta.xml
<CustomField>
    <fullName>Enable_reCaptcha__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should reCaptcha be enabled for this setting?</inlineHelpText>
    <label>Enable reCaptcha</label>
    <type>Checkbox</type>
</CustomField>