Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/reCaptcha_Score_Minimum__c.field-meta.xml
<CustomField>
    <fullName>reCaptcha_Score_Minimum__c</fullName>
    <inlineHelpText>The minimum score threshold used to verify reCaptcha. Not supported for reCaptcha 2.</inlineHelpText>
    <label>reCaptcha Score Minimum</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>