Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/reCaptcha_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>reCaptcha_Secret_Key__c</fullName>
    <inlineHelpText>The reCaptcha secret key. Used to verify reCaptcha responses.</inlineHelpText>
    <label>reCaptcha Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>