Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/reCaptcha_Site_Key__c.field-meta.xml
<CustomField>
    <fullName>reCaptcha_Site_Key__c</fullName>
    <inlineHelpText>The public site key for reCaptcha.</inlineHelpText>
    <label>reCaptcha Site Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>