Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/reCaptcha_Version__c.field-meta.xml
<CustomField>
    <fullName>reCaptcha_Version__c</fullName>
    <inlineHelpText>Which reCaptcha version is being configured?</inlineHelpText>
    <label>reCaptcha Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
                <default>true</default>
                <label>3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>